--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,13 @@
     <string name="hint">Insert number below</string>
     <string name="getlatestnumber">Use latest number</string>
     <string name="title_activity_splash">SplashActivity</string>
+
+    <string-array name="tabs">
+        <item>Search</item>
+        <item>Manage</item>
+    </string-array>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="empty" />
 </resources>
